# revbayes.archive

./: .gitignore  .travis.yml  CHANGELOG.md  Func_powermix.h  LICENSE  README.md  RevBayes_Win_Installation_Instruction.txt  bugs.txt  feature_requests.txt  meson.build  meson_options.txt  travis-build.sh  txt
projects/cmake/: CMakeLists.txt  README.txt  build-OSX-universal.sh  build-OSX.sh  build-maverick.sh  build-mavericks-mpi.sh  build-mavericks.sh  build-ninja.sh  build-win.sh  build.sh  generate_version_number.sh  mingw64_toolchain.cmake  regenerate.sh  regenerate_mingw.sh
src/: .cproject  .project  CMakeLists.txt  header.txt  main.cpp  makefile  meson.build  source.txt
src/ProbabilityCalculators/: ProbabilityCalculator.h
src/calculators/: ProbabilityCalculator.h
src/cmd/: RbGTKGui.cpp  RbGTKGui.h  main.cpp  meson.build
src/core/: meson.build
src/dag/: ComplexNode.h  ConstantNode.cpp  ConstantNode.h  ContainerIterator.cpp  ContainerIterator.h  ContainerNode.cpp  ContainerNode.h  ConverterNode.cpp  ConverterNode.h  DAGNode.cpp  DAGNode.h  DAGNodeContainer.cpp  DAGNodeContainer.h  DAGNodePlate.cpp  DAGNodePlate.h  DeterministicNode.cpp  DeterministicNode.h  FunctionNode.cpp  FunctionNode.h  IntegratorNode.cpp  IntegratorNode.h  LookupNode.cpp  LookupNode.h  Makefile  MemberNode.cpp  MemberNode.h  RbObjectWrapper.cpp  RbObjectWrapper.h  StochasticNode.cpp  StochasticNode.h  VariableNode.cpp  VariableNode.h
src/datatypes/: Makefile  RbAbstractDataType.cpp  RbAbstractDataType.h  RbDataType.h  RbInternal.cpp  RbInternal.h  RbObject.cpp  RbObject.h  RbTypeInfo.cpp  RbTypeInfo.h  RbUndefined.cpp  RbUndefined.h
src/deprecated/: AutocorrelatedLognormalRateBranchwiseVarDistribution.cpp  AutocorrelatedLognormalRateBranchwiseVarDistribution.h  AutocorrelatedLognormalRateDistribution.h  BranchRateJumpProcess.cpp  BranchRateJumpProcess.h  ConditionalCladeProbabilityDistribution.h  ConjugateInverseWishartBrownianMove.cpp  ConjugateInverseWishartBrownianMove.h  DPPScaleCatAllocateAuxGibbs.h  Dist_autocorrelatedLnBranchRates.cpp  Dist_autocorrelatedLnBranchRates.h  Dist_branchRateJumpProcess.cpp  ExponentialBranchTree.cpp  FossilSafeScaleMove.cpp  FossilSafeScaleMove.h  FossilSafeSlideMove.cpp  Func_averageRateOnBranch.h  Func_expBranchTree.h  Func_phyloRateMultiplier.cpp  Func_phyloRateMultiplier.h  Func_powermix.cpp  Func_powermix.h  Func_t92GCBranchTree.cpp  Func_tanhBranchTree.cpp  Func_tanhBranchTree.h  HyberpolicTangentBranchTree.cpp  HyberpolicTangentBranchTree.h  LengthTree.cpp  LengthTree.h  Move_ConjugateInverseWishartBrownian.cpp  Move_ConjugateInverseWishartBrownian.h  Move_DPPScaleCatAllocateAux.cpp  Move_FossilSafeScale.cpp  Move_MultivariateRealNodeValTreeSliding.cpp  Move_MultivariateRealNodeValTreeSliding.h  Move_MultivariateRealNodeValTreeTranslation.cpp  Move_MultivariateRealNodeValTreeTranslation.h  Move_RLCRateScale.cpp  Move_RealNodeValTreeSliding.h  Move_RealNodeValTreeTranslation.cpp  (+23 more)
src/distributionFunctions/: Dist_dir.cpp  Dist_dir.h  Dist_gamma.cpp  Dist_gamma.h  Distribution.cpp  Distribution.h  DistributionReal.cpp  DistributionReal.h
src/distributions/: CMakeLists.txt  DistBeta.h  DistNormal.cpp  DistNormal.h  Distribution.cpp  Distribution.h  DistributionCategorical.h  DistributionInterval.cpp  DistributionInterval.h  DistributionReal.cpp  DistributionReal.h  FunctionDistribution.h  Makefile
src/factories/: RandomNumberFactory.cpp  RandomNumberFactory.h
src/factory/: DistributionFactory.cpp  DistributionFactory.h  Factory.h  LikelihoodFactory.cpp  LikelihoodFactory.h  MoveFactory.cpp  MoveFactory.h  NodeFactory.cpp  NodeFactory.h  RandomNumberFactory.cpp  RandomNumberFactory.h
src/functions/: AbstractFunction.cpp  AbstractFunction.h  ArgRule.cpp  ArgRule.h  Argument.cpp  Argument.h  ArgumentRule.cpp  ArgumentRule.h  BuiltinFunction.cpp  BuiltinFunction.h  ConstructorFunction.cpp  ConstructorFunction.h  DistributionFunction.cpp  DistributionFunction.h  Ellipsis.cpp  Ellipsis.h  FunctionDef.cpp  FunctionDef.h  Makefile  MemberFunction.cpp  MemberFunction.h  MinmaxRule.cpp  MinmaxRule.h  ObjectSlot.cpp  ObjectSlot.h  OptionRule.cpp  RbAbstractFunction.cpp  RbAbstractFunction.h  RbAccessor.cpp  RbAccessor.h  RbAccessorFxn.cpp  RbAccessorFxn.h  RbFunction.cpp  RbFunction.h  RbFunction_c.cpp  RbFunction_c.h  RbFunction_dim.cpp  RbFunction_dim.h  RbFunction_gtrQ.cpp  RbFunction_gtrQ.h  (+8 more)
src/grammar/: Makefile  grammar.output  grammar.tab.cpp  grammar.tab.h  grammar.y  lex.l  lex.yy.cpp
src/gui/: RevBayesGUI-Info.plist  RevBayesGui-Info.plist  RevBayesGui-Prefix.pch  main.mm
src/help/: AutocorrelatedRelaxedMolecularClock.xml  BranchHeterogeneousGTR.xml  DppBranchHeterogeneousGTR.xml  HtmlHelpGenerator.cpp  ModelAveragedUncorrelatedRelaxedMolecularClock.xml  README.md  UncorrelatedRelaxedMolecularClock.xml  YAML.cpp  YAML.h  YAMLHelpGenerator.cpp  YAMLHelpRenderer.cpp  YamlHelpGenerator.cpp  md2help.pl  read_chardata
src/help2yml/: YAMLHelpRenderer.h
src/html/: index.html
src/inference/: RbValue.h
src/latex/: doxygen.sty  refman.tex
src/libs/: meson.build
src/macgui/: AppDelegate.h  AppDelegate.mm  Document.h  Document.mm  Document.xib  Info.plist  MainMenu.xib  main.mm
src/main/: Argument.h  ArgumentRule.h  Branch.h  CMakeLists.txt  DAGNode.cpp  DAGNode.h  DeterministicNode.h  DistDirichlet.cpp  DistDirichlet.h  Distribution.h  DistributionContainer.h  DistributionFactory.cpp  DistributionFactory.h  DistributionReal.h  EvoMoDeLParser.h  Factory.h  Makefile  MbRandom.cpp  MbRandom.h  Model.cpp  Model.h  Monitor.cpp  Monitor.h  Move.h  Node.h  Plugin.cpp  Plugin.h  REvBayesMain.cpp  REvBayesMain.h  RandomNumberFactory.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  RateMatrix.cpp  RateMatrix.h  RbBool.cpp  RbBool.h  RbCommand.h  RbDataType.h  RbDumpState.h  RbInt.cpp  (+29 more)
src/math/: DistributionBeta.cpp  DistributionBeta.h  DistributionBinomial.cpp  DistributionBinomial.h  DistributionCauchy.cpp  DistributionCauchy.h  DistributionChisq.cpp  DistributionChisq.h  DistributionDirichlet.cpp  DistributionExponential.cpp  RbMath.cpp  (+33 more)
(+10174 files in other folders)
