option('mpi', type : 'boolean', value : false, description: 'Compile with MPI')
option('jupyter', type: 'boolean', value: false, description: 'Build rb-jupyter kernel')
option('studio', type: 'boolean', value: false, description: 'Build gtk shell')
option('beagle', type: 'combo', value: 'disable', choices: ['auto', 'enable','disable'], description: 'Depend on BEAGLE library')

