src_inc = include_directories([
'cmd',
'core/analysis',
'core/analysis/mcmc',
'core/analysis/mcmc/convergence',
'core/analysis/mcmc/output',
'core/analysis/stoppingRule',
'core/dag',
'core/datatypes',
'core/datatypes/math',
'core/datatypes/phylogenetics',
'core/datatypes/phylogenetics/character',
'core/datatypes/phylogenetics/characterdata',
'core/datatypes/phylogenetics/characterhistory',
'core/datatypes/phylogenetics/cladogeneticmatrix',
'core/datatypes/phylogenetics/geography',
'core/datatypes/phylogenetics/ratemap',
'core/datatypes/phylogenetics/ratematrix',
'core/datatypes/trees',
'core/distributions',
'core/distributions/math',
'core/distributions/phylogenetics',
'core/distributions/phylogenetics/characterhistory',
'core/distributions/phylogenetics/continuousCharacter',
'core/distributions/phylogenetics/substitution',
'core/distributions/phylogenetics/tree',
'core/distributions/phylogenetics/tree/birthdeath',
'core/distributions/phylogenetics/tree/coalescent',
'core/functions',
'core/functions/builtin',
'core/functions/distribution',
'core/functions/math',
'core/functions/phylogenetics',
'core/functions/phylogenetics/cladogenetic',
'core/functions/phylogenetics/ratemap',
'core/functions/phylogenetics/ratematrix',
'core/functions/phylogenetics/tree',
'core/functions/popgen',
'core/functions/vector',
'core/help',
'core/io',
'core/math',
'core/math/distributions',
'core/monitors',
'core/monitors/characterhistory',
'core/moves',
'core/moves/characterhistory',
'core/moves/compound',
'core/moves/mixture',
'core/moves/proposal',
'core/moves/proposal/matrix',
'core/moves/proposal/mixture',
'core/moves/proposal/scalar',
'core/moves/proposal/simplex',
'core/moves/proposal/tree',
'core/moves/proposal/vector',
'core/statistics/mixture',
'core/statistics/tree',
'core/utils',
'libs/lineedit',
'libs/linenoise',
'libs/ncl',
'revlanguage',
'revlanguage/analysis',
'revlanguage/analysis/mcmc',
'revlanguage/analysis/mcmc/output',
'revlanguage/dag',
'revlanguage/datatypes',
'revlanguage/datatypes/basic',
'revlanguage/datatypes/container',
'revlanguage/datatypes/math',
'revlanguage/datatypes/phylogenetics',
'revlanguage/datatypes/phylogenetics/character',
'revlanguage/datatypes/phylogenetics/characterdata',
'revlanguage/datatypes/phylogenetics/characterhistory',
'revlanguage/datatypes/phylogenetics/geography',
'revlanguage/datatypes/phylogenetics/trees',
'revlanguage/distributions',
'revlanguage/distributions/math',
'revlanguage/distributions/mixture',
'revlanguage/distributions/phylogenetics',
'revlanguage/distributions/phylogenetics/branchrate',
'revlanguage/distributions/phylogenetics/character',
'revlanguage/distributions/phylogenetics/tree',
'revlanguage/functions',
'revlanguage/functions/argument',
'revlanguage/functions/argumentrules',
'revlanguage/functions/basic',
'revlanguage/functions/internal',
'revlanguage/functions/io',
'revlanguage/functions/math',
'revlanguage/functions/math_helper',
'revlanguage/functions/phylogenetics',
'revlanguage/functions/phylogenetics/ratemap',
'revlanguage/functions/phylogenetics/ratematrix',
'revlanguage/functions/phylogenetics/tree',
'revlanguage/functions/popgen',
'revlanguage/monitors',
'revlanguage/monitors/characterhistory',
'revlanguage/moves',
'revlanguage/moves/integer',
'revlanguage/moves/matrix',
'revlanguage/moves/mixture',
'revlanguage/moves/scalar',
'revlanguage/moves/simplex',
'revlanguage/moves/tree',
'revlanguage/moves/vector',
'revlanguage/parser',
'revlanguage/ui',
'revlanguage/utils',
'revlanguage/workspace',
])


subdir('core')
subdir('revlanguage')
subdir('libs')
subdir('cmd')

